--- a/gow.ipynb
+++ b/gow.ipynb
@@ -586,11 +586,11 @@
     {
      "data": {
       "text/plain": [
-       "[<networkx.classes.graph.Graph at 0x7ff2b118d4a8>,\n",
-       " <networkx.classes.graph.Graph at 0x7ff2b118d470>,\n",
-       " <networkx.classes.graph.Graph at 0x7ff2b118d4e0>,\n",
-       " <networkx.classes.graph.Graph at 0x7ff2b118d518>,\n",
-       " <networkx.classes.graph.Graph at 0x7ff2b118d588>]"
+       "[<networkx.classes.graph.Graph at 0x7f060f22aeb8>,\n",
+       " <networkx.classes.graph.Graph at 0x7f060f22ae80>,\n",
+       " <networkx.classes.graph.Graph at 0x7f060f22aef0>,\n",
+       " <networkx.classes.graph.Graph at 0x7f060f22af28>,\n",
+       " <networkx.classes.graph.Graph at 0x7f060f22af98>]"
       ]
      },
      "execution_count": 26,
@@ -618,21 +618,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting python-louvain\n",
-      "  Downloading python-louvain-0.15.tar.gz (204 kB)\n",
-      "\u001b[K     |████████████████████████████████| 204 kB 25.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: networkx in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from python-louvain) (2.5)\n",
+      "Requirement already satisfied: python-louvain in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (0.15)\n",
+      "Requirement already satisfied: networkx in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from python-louvain) (2.5)\n",
       "Requirement already satisfied: numpy in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from python-louvain) (1.19.5)\n",
-      "Requirement already satisfied: decorator>=4.3.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from networkx->python-louvain) (4.4.2)\n",
-      "Building wheels for collected packages: python-louvain\n",
-      "  Building wheel for python-louvain (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for python-louvain: filename=python_louvain-0.15-py3-none-any.whl size=9401 sha256=06a4fa939e54afdbb566b920f077a0b74a3e5ff80ffa8707930247a81a41eeb7\n",
-      "  Stored in directory: /home/ec2-user/.cache/pip/wheels/9b/69/7c/a710d79e0174abd8b0e154d1360604eb125a86b5053f68cacd\n",
-      "Successfully built python-louvain\n",
-      "Installing collected packages: python-louvain\n",
-      "Successfully installed python-louvain-0.15\n",
-      "\u001b[33mWARNING: You are using pip version 21.1.2; however, version 21.2.2 is available.\n",
-      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/python3/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: decorator>=4.3.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from networkx->python-louvain) (4.4.2)\n"
      ]
     }
    ],
@@ -687,9 +676,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3373: RuntimeWarning: Mean of empty slice.\n",
+      "  out=out, **kwargs)\n",
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/numpy/core/_methods.py:170: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    }
+   ],
    "source": [
     "for language in graphs.keys():\n",
     "    for n_part in graphs[language].keys():\n",
@@ -698,13 +698,16 @@
     "        for i in range(len(list_graphs)):\n",
     "            G=list_graphs[i]\n",
     "            G.remove_edges_from(nx.selfloop_edges(G))\n",
-    "            list_core[i+1]=np.sum(list(nx.core_number(G).values()))\n",
+    "            try:\n",
+    "                list_core[i+1]=np.mean(list(nx.core_number(G).values()))\n",
+    "            except ValueError:\n",
+    "                list_core[i+1]=0\n",
     "        core_dict[language][n_part]=list_core"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +852,7 @@
        "  10: 2.1392405063291138}}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
